test/ui/tests/name-resolution/mistyped-namespace.stderr
error[E017]: binding ‘true-treasures-of-life’ is not a namespace
 --> ${TEST_FOLDER}/name-resolution/mistyped-namespace.lushui:7:5
  |
7 | use true-treasures-of-life.Friendship
  |     ^^^^^^^^^^^^^^^^^^^^^^ not a namespace but a function
  |
 --> ${TEST_FOLDER}/name-resolution/mistyped-namespace.lushui:7:27
  |
7 | use true-treasures-of-life.Friendship
  |                           ----------- denotes a reference to a binding inside of a namespace
  |
 help: a namespace with a similar name exists in scope containing the binding:
           `the-true-treasures-of-life`

error[E017]: binding ‘shared-spades’ is not a namespace
  --> ${TEST_FOLDER}/name-resolution/mistyped-namespace.lushui:23:5
   |
23 | use shared-spades.One
   |     ^^^^^^^^^^^^^ not a namespace but a function
   |
  --> ${TEST_FOLDER}/name-resolution/mistyped-namespace.lushui:23:18
   |
23 | use shared-spades.One
   |                  ---- denotes a reference to a binding inside of a namespace
   |
  help: a namespace with a similar name exists in scope containing the binding:
            `shared-spaces` (shared-spadces)

error: aborting due to 2 previous errors

